--- a/src/components/productionPage/PageTitleProduction/PageTitleProduction.module.scss
+++ b/src/components/productionPage/PageTitleProduction/PageTitleProduction.module.scss
@@ -110,6 +110,11 @@
 }
 
 @media (max-width: 768px) {
+
+	.wrap {
+		border-radius: 10px;
+	}
+
 	.title {
 		// font-size: 36px;
 		margin: 15px 10px 10px 0;
