--- a/src/components/productionPage/ProductionContent/ProductionContent.module.scss
+++ b/src/components/productionPage/ProductionContent/ProductionContent.module.scss
@@ -327,22 +327,22 @@
 		}
 	}
 
-	.cardContainer:nth-child(1) .videoPart {
+	.cardContainer:nth-child(2) .videoPart {
 		background: url('../../../../public/ProductionContent/longitudinal-mobile.png') no-repeat;
 	}
-	.cardContainer:nth-child(2) .videoPart {
+	.cardContainer:nth-child(3) .videoPart {
 		background: url('../../../../public/ProductionContent/face-mobile.png') no-repeat;
 	}
-	.cardContainer:nth-child(3) .videoPart {
+	.cardContainer:nth-child(4) .videoPart {
 		background: url('../../../../public/ProductionContent/flat-mobile.png') no-repeat;
 	}
-	.cardContainer:nth-child(4) .videoPart {
+	.cardContainer:nth-child(5) .videoPart {
 		background: url('../../../../public/ProductionContent/rotary-mobile.png') no-repeat;
 	}
-	.cardContainer:nth-child(5) .videoPart {
+	.cardContainer:nth-child(6) .videoPart {
 		background: url('../../../../public/ProductionContent/plotter-mobile.png') no-repeat;
 	}
-	.cardContainer:nth-child(6) .videoPart {
+	.cardContainer:nth-child(7) .videoPart {
 		background: url('../../../../public/ProductionContent/lamination-mobile.png') no-repeat;
 	}
 
